[package]
name = "s3_to_ftp_transfer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async_ftp = "6.0.0"
bytes = "1.0"